Changes in the current layout

--- a/index.html
+++ b/index.html
@@ -23,61 +23,40 @@
     <![endif]-->
 </head>
 <body>
-    <!--[if lt IE 7]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
-        your browser</a> to improve your experience.</p>
-    <![endif]-->
 
+    <!--Header-->
+    <header>
+        <div class="logo"><a href="/">Home</a></div>
+        <div class="menu">
+            <ul>
+                <li><a href="#">Item 1</a></li>
+                <li><a href="#">Item 2</a></li>
+                <li><a href="#">Item 3</a></li>
+                <li><a href="#">Item 4</a></li>
+            </ul>
+        </div>
+    </header> <!-- //Header -->
+
+    <!-- Container -->
     <div class="container">
-        <h1>The 10 column complex nested grid AG test</h1>
-
-        <div class="ag ag1">
-            <h2>AG 1</h2>
+        <div class="ag1 hero-img">
+            <h1>This is the motherfucking carousel</h1>
         </div>
-        <!-- /ag1 -->
-
-        <!-- ag4 to ag7 are nested within ag2.-->
-        <div class="ag ag2">
-            <h2>AG 2</h2>
-            <div class="ag ag4">
-                <h2>AG 4</h2>
-            </div>
-            <div class="ag ag5">
-                <h2>AG 5</h2>
-            </div>
-            <div class="ag ag6">
-                <h2>AG 6</h2>
-            </div>
-
-            <!-- ag8, ag9 and ag10 are nested within ag7 -->
-            <div class="ag ag7">
-                <h2>AG 7</h2>
-                <div class="ag ag8">
-                    <h2>AG 8</h2>
-                </div>
-                <div class="ag ag9">
-                    <h2>AG 9</h2>
-                </div>
-                <div class="ag ag10">
-                    <h2>AG 10</h2>
-                </div>
-            </div>
-            <!-- /ag7 -->
+        <div class="ag1">
+            <div class="ag2"><h2>This is an item</h2></div>
+            <div class="ag2"><h2>This is an item</h2></div>
+            <div class="ag2"><h2>This is an item</h2></div>
         </div>
-        <!-- /ag2 -->
+    </div> <!-- //Container -->
 
-        <div class="ag ag3">
-            <h2>AG 3</h2>
-        </div>
-        <!-- /ag3 -->
+    <!--Pre-Footer-->
+    <div class="pre-footer">
 
-    </div>
-    <!-- /container -->
+    </div><!-- //Pre-footer>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+    <!--Footer-->
+    <footer>
+    </footer> <!-- //Footer -->
 
-    <!-- Custom libraries -->
-    <!--<script src="js/main.js"></script>-->
 </body>
 </html>
